[b][color=orange]v4.59 for Shadowland PrePatch[/color], 22.10.2020[/b][list]
[*]Fix a green icon on my RaidManager. I remove by accident a texture
[*]More updates to the MicroBar: Fix stuttering/lags
[*]The MicroBar also shows now the time datatext from ElvUI
[*]Updated my AutoButtons
[*]Updated the ChatBar
[*]Added a mover for the Buff Reminder[/list]


[b][color=orange]v4.58 for Shadowland PrePatch[/color], 17.10.2020[/b][list]
[*]More fixes/updates to my new MicroBar -> own Option-Category
[*]Fixed an error with the ActionBarProfile skin
[*]Added some more frames to the blacklist on the FlightMode[/list]


[b][color=orange]v4.57 for Shadowland PrePatch[/color], 17.10.2020[/b][list]
[*]Updated my DPS Layout due to some backdrop changes in ElvUI
[*]Fixed an error in LFG Info
[*]Updated my MicroBar, its now more customizable
[*]Due to the updated MicroBar, i've also deleted my middle DataText Panel
[*]Updated my Minimap Ping
[*]Removed RaidCD, use a WeakAura instead or w/e[/list]


[b][color=orange]v4.56 for Shadowland PrePatch[/color], 14.10.2020[/b][list]
[*]Adjusted QuestInfo skin to show colored progress again.
[*]Fix my skin for ClassColored ScrollBars. >.>
[*]Adjust the backdrop for AutoBar.
[*]Commented out new HearthStones for SL, it broke the LocPanel.[/list]


[b][color=orange]v4.55 for Shadowland PrePatch[/color], 13.10.2020[/b][list]
[*]**YOU NEED ELVUI 12.00**
[*]Added an own FlightMode (inspired by Benik's)
[*]Updated/Added a lot of skins due to Shadowland code changes.
[*]Added an options for my Top-/Bottom Panel to change the height.
[*]Maybe a lot of other changes i already forgot.. lol.[/list]


[b][color=orange]v4.54[/color], 27.08.2020[/b][list]
[*]Fixed an incompatibility error, which errors out my Plugin[/list]


[b][color=orange]v4.53[/color], 27.08.2020[/b][list]
[*]Added Holographic Digitalization to the LocPanel Hearthstones
[*]Updated the logo for my SplashScreen
[*]Don't hide some textures from the ObjectiveTracker