@@ -1,3 +1,13 @@
+[b][color=orange]v4.60 for Shadowland PrePatch[/color], 24.10.2020[/b][list]
+[*]Added a skin for the AddOn WarPlan
+[*]Fixed an install whoopsi for the position on AB3 >.>
+[*]Added a frame on the MailBox SendMail Frame, to easy send mail to contacts
+[*]The Keybinds for the AutoButtons now finally works
+[*]Added a custom fade option if you use mouseOver on AutoButtons
+[*]Add a right click function for MicroBar: Collection & Toybox Buttons
+[*]Small tweaks and skin upates[/list]
+
+
 [b][color=orange]v4.59 for Shadowland PrePatch[/color], 22.10.2020[/b][list]
 [*]Fix a green icon on my RaidManager. I remove by accident a texture
 [*]More updates to the MicroBar: Fix stuttering/lags
